# americansouth

./: .bumpversion.toml  .renovaterc.json  README.md  diag.md  pyproject.toml
.github/workflows/: ci.yml
src/americansouth/: __init__.py  __main__.py  data_processor.py
