[project]
name = "americansouth"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
dependencies = [
    "jinja2>=3.1.3",
    "platformdirs>=4.2.2",
]
readme = "README.md"
requires-python = ">= 3.9"


[project.urls]
Homepage = "https://github.com/gkwa/americansouth"
Repository = "https://github.com/gkwa/americansouth"


[project.scripts]
americansouth = "americansouth:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages = ["src/americansouth"]


[tool.ruff.lint]
extend-select = ["I"]
